// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component should not render because there is no previous items nor next items 1`] = `null`;

exports[`Navigation component should render with (prev button disabled: false) and (next button disabled: false) 1`] = `
<div>
  <div
    class="ui-multibutton-group-3397"
    style="display: flex;"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 wrapper ui-button-fill-cef1 ui-button-secondary-cef1"
      id="prev-btn"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        <i
          class="material-icons icon"
        >
          keyboard_arrow_left
        </i>
      </span>
    </button>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 wrapper ui-button-fill-cef1 ui-button-secondary-cef1"
      id="next-btn"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        <i
          class="material-icons icon"
        >
          keyboard_arrow_right
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`Navigation component should render with (prev button disabled: false) and (next button disabled: true) 1`] = `
<div>
  <div
    class="ui-multibutton-group-3397"
    style="display: flex;"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 wrapper ui-button-fill-cef1 ui-button-secondary-cef1"
      id="prev-btn"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        <i
          class="material-icons icon"
        >
          keyboard_arrow_left
        </i>
      </span>
    </button>
    <button
      aria-disabled="true"
      class="ui-button-wrapper-cef1 wrapper ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-isdisabled-cef1"
      id="next-btn"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        <i
          class="material-icons icon"
        >
          keyboard_arrow_right
        </i>
      </span>
    </button>
  </div>
</div>
`;

exports[`Navigation component should render with (prev button disabled: true) and (next button disabled: false) 1`] = `
<div>
  <div
    class="ui-multibutton-group-3397"
    style="display: flex;"
  >
    <button
      aria-disabled="true"
      class="ui-button-wrapper-cef1 wrapper ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-isdisabled-cef1"
      id="prev-btn"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        <i
          class="material-icons icon"
        >
          keyboard_arrow_left
        </i>
      </span>
    </button>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 wrapper ui-button-fill-cef1 ui-button-secondary-cef1"
      id="next-btn"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        <i
          class="material-icons icon"
        >
          keyboard_arrow_right
        </i>
      </span>
    </button>
  </div>
</div>
`;
